--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-_site
+bower_components/bootstrap/fonts
+bower_components/bootstrap/grunt
+bower_components/bootstrap/js
+bower_components/bootstrap/less
+bower_components/jquery/src
+
